# DigitalOscilloscope_Firmware

./: .gitignore  CMakeLists.txt  Dockerfile  Kconfig  Makefile  crash_backtrace.txt  docker-compose.yaml  prj.conf
ext/boards/nucleo_h723zg_dev/: Kconfig.nucleo_h723zg_dev  board.yml  nucleo_h723zg_dev.dts
ext/drivers/: CMakeLists.txt  Kconfig
ext/drivers/dac/: CMakeLists.txt  Kconfig  Kconfig.dac61408  Kconfig.dacx1408  dac_dac61408.c  dac_dacx1408.c
ext/dts/bindings/dac/: ti,dac61408.yaml  ti,dacx1408.yaml
ext/zephyr/: module.yaml
src/: main.c
src/app/: app.c  app.h
src/app/afe_manager/: afe_manager.c  afe_manager.h
src/app/app_shell/: app_shell.c  app_shell.h
src/app/parallel_link/: parallel_link.c  parallel_link.h
src/app/tcp_server/: tcp_server.c  tcp_server.h
tools/OpenOCD/stm32h723zg/: run_debug_server_template.sh  stm32h7.config
tools/devcontainer/: dev.code-workspace  devcontainer.json
tools/vscode/: launch.json
